# json-pretty

./: CMakeLists.txt  Troubleshooter
cli/: main.cpp
include/json_pretty/: error.hpp  parser.hpp  result.hpp  value.hpp
src/: main.cpp  parser.cpp
